Dummy Data Home
Added dummy data to homepage and added an images directory to public

--- a/client/public/Home.html
+++ b/client/public/Home.html
@@ -63,6 +63,10 @@
   </div>
 </nav>
 
+	<h1>Chicken Salad</h1>
+	<img src="images/chickun.jpg" alt="DENNY" width=300 height=300>
+	<p>serves: 4 | cook time: 20 minutes</p>
+	
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
