More Homepage dummy data
Added two recipes to dummy data on the home page

--- a/client/public/Home.html
+++ b/client/public/Home.html
@@ -64,8 +64,16 @@
 </nav>
 
 	<h1>Chicken Salad</h1>
-	<img src="images/chickun.jpg" alt="DENNY" width=300 height=300>
+	<img src="images/chickun.jpg" alt="ChickenSaladImage" width=300 height=300>
 	<p>serves: 4 | cook time: 20 minutes</p>
+	
+	<h1>Instant Pot Honey Garlic Chicken</h1>
+	<img src="images/eeffreef.jpg" alt="HoneyPotGarlicImage" width=300 height=300>
+	<p>serves: 4 | cook time: 30 minutes</p>
+	
+	<h1>General Tso’s Chicken</h1>
+	<img src="images/theGeneralsChicken.jpg" alt="GeneralTsosChickenImage" width=300 height=300>
+	<p>serves: 8 | cook time: 40 minutes</p>
 	
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
