--- a/client/public/RecipeInfo.html
+++ b/client/public/RecipeInfo.html
@@ -62,6 +62,31 @@
   </div>
 </nav>
 
+	<h1>Chicken Salad</h1>
+	<p>author: Dicknose Biggumsby</p>
+	<img src="images/chickun.jpg" alt="ChickenSaladImage" width=500 height=500>
+	<p>serves: 4 | cook time: 20 minutes</p>
+	<h2>Ingredients</h2>
+	<ul style="list-style-type:disc">
+		<li>4 chicken breasts</li>
+		<li>2 Granny Smith Apples</li>
+		<li>1 cup seedless grapes</li>
+		<li>¼ cup Craisins or raisins (optional)</li>
+		<li>2 – 3 Green Onions (optional)</li>
+		<li>1 tsp Lemon Pepper (optional, to taste)</li>
+		<li>½ - 2/3 cup mayonnaise </li>
+		<li>1 Melon (Honeydew, Cantelope, etc.)</li>
+	</ul>
+	<h2>Instructions</h2>
+	<p>Boil chicken breasts until done.  Cool in refrigerator until well chilled.</p>
+	<p>Cut chicken into bite size pieces.  Core apples and cut into bite size pieces.  
+		Cut grapes in half.  Mix chicken, apples, grapes, Craisins, onion and lemon 
+		pepper with mayonnaise.  Adjust mayonnaise depending on desired consistency/taste.  
+		Chill.</p>
+	<p>Serve chicken salad over slices of seeded melon.</p>
+	
+	
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
