--- a/client/public/Home.html
+++ b/client/public/Home.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="styles.css">
+
     <title>Home Page</title>
     <!-- Home Page to be infinite scrolling, subcategories will have pagination -->
   </head>
@@ -62,18 +64,71 @@
     </form>
   </div>
 </nav>
+	<div class="container">
+		<div class="row" style="margin-bottom: 15px;">
+			<div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+	  			<h1>Chicken Salad</h1>
+				<img src="images/chickun.jpg" alt="ChickenSaladImage" width=200 height=200>
+				<h4>serves: 4 | cook time: 20 minutes</h4>
+			</div>
+			<div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+				<div class="homepage-recipe-tile">
+		  			<h1>Instant Pot Honey Garlic Chicken</h1>
+					<img src="images/eeffreef.jpg" alt="HoneyPotGarlicImage" width=200 height=200>
+					<h4>serves: 4 | cook time: 30 minutes</h4>
+				</div>
+			</div>
+		    <div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+		    	<div class="homepage-recipe-tile">
+		      		<h1>General Tso’s Chicken</h1>
+					<img src="images/theGeneralsChicken.jpg" alt="GeneralTsosChickenImage" width=200 height=200>
+					<h4>serves: 8 | cook time: 40 minutes</h4>
+				</div>
+		    </div>
+		</div>
+		<div class="row" style="margin-bottom: 15px;">
+			<div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+	  			<h1>Chicken Salad</h1>
+				<img src="images/chickun.jpg" alt="ChickenSaladImage" width=200 height=200>
+				<h4>serves: 4 | cook time: 20 minutes</h4>
+			</div>
+			<div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+				<div class="homepage-recipe-tile">
+		  			<h1>Instant Pot Honey Garlic Chicken</h1>
+					<img src="images/eeffreef.jpg" alt="HoneyPotGarlicImage" width=200 height=200>
+					<h4>serves: 4 | cook time: 30 minutes</h4>
+				</div>
+			</div>
+		    <div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+		    	<div class="homepage-recipe-tile">
+		      		<h1>General Tso’s Chicken</h1>
+					<img src="images/theGeneralsChicken.jpg" alt="GeneralTsosChickenImage" width=200 height=200>
+					<h4>serves: 8 | cook time: 40 minutes</h4>
+				</div>
+		    </div>
+		</div>
+		<div class="row" style="margin-bottom: 15px;">
+			<div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+	  			<h1>Chicken Salad</h1>
+				<img src="images/chickun.jpg" alt="ChickenSaladImage" width=200 height=200>
+				<h4>serves: 4 | cook time: 20 minutes</h4>
+			</div>
+			<div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+				<div class="homepage-recipe-tile">
+		  			<h1>Instant Pot Honey Garlic Chicken</h1>
+					<img src="images/eeffreef.jpg" alt="HoneyPotGarlicImage" width=200 height=200>
+					<h4>serves: 4 | cook time: 30 minutes</h4>
+				</div>
+			</div>
+		    <div class="col-md border border-warning rounded bg-warning m-2 homepage-recipe-tile" style="margin-bottom: 10px;">
+		    	<div class="homepage-recipe-tile">
+		      		<h1>General Tso’s Chicken</h1>
+					<img src="images/theGeneralsChicken.jpg" alt="GeneralTsosChickenImage" width=200 height=200>
+					<h4>serves: 8 | cook time: 40 minutes</h4>
+				</div>
+		    </div>
+		</div>
 
-	<h1>Chicken Salad</h1>
-	<img src="images/chickun.jpg" alt="ChickenSaladImage" width=300 height=300>
-	<p>serves: 4 | cook time: 20 minutes</p>
-	
-	<h1>Instant Pot Honey Garlic Chicken</h1>
-	<img src="images/eeffreef.jpg" alt="HoneyPotGarlicImage" width=300 height=300>
-	<p>serves: 4 | cook time: 30 minutes</p>
-	
-	<h1>General Tso’s Chicken</h1>
-	<img src="images/theGeneralsChicken.jpg" alt="GeneralTsosChickenImage" width=300 height=300>
-	<p>serves: 8 | cook time: 40 minutes</p>
 	
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
