Catching Back up to Speed

--- a/client/public/RecipeInfo.html
+++ b/client/public/RecipeInfo.html
@@ -63,7 +63,7 @@
 </nav>
 
 	<h1>Chicken Salad</h1>
-	<p>author: Dicknose Biggumsby</p>
+	<p>Author: John Doe</p>
 	<img src="images/chickun.jpg" alt="ChickenSaladImage" width=500 height=500>
 	<p>serves: 4 | cook time: 20 minutes</p>
 	<h2>Ingredients</h2>
@@ -79,13 +79,13 @@
 	</ul>
 	<h2>Instructions</h2>
 	<p>Boil chicken breasts until done.  Cool in refrigerator until well chilled.</p>
-	<p>Cut chicken into bite size pieces.  Core apples and cut into bite size pieces.  
-		Cut grapes in half.  Mix chicken, apples, grapes, Craisins, onion and lemon 
-		pepper with mayonnaise.  Adjust mayonnaise depending on desired consistency/taste.  
+	<p>Cut chicken into bite size pieces.  Core apples and cut into bite size pieces.
+		Cut grapes in half.  Mix chicken, apples, grapes, Craisins, onion and lemon
+		pepper with mayonnaise.  Adjust mayonnaise depending on desired consistency/taste.
 		Chill.</p>
 	<p>Serve chicken salad over slices of seeded melon.</p>
-	
-	
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
