Form for New Recipe

--- a/client/public/NewRecipe.html
+++ b/client/public/NewRecipe.html
@@ -64,6 +64,22 @@
             </div>
         </nav>
 
+        <body>
+            <form id="newRecipeForm">
+                <label for="recipeTitleField"><h2>Recipe Title</h2></label>
+                <input id="recipeTitleField" type="text" placeholder="Recipe Title" required autofocus />
+                <br />
+                <label for="authorNameField"><h2>Author Name</h2></label>
+                <input id="authorNameField" type="text" placeholder="Author Name" required />
+                <br />
+                <label for="recipeInstructionsField"><h2>Recipe Instructions</h2></label>
+                <input id="recipeInstructionsField" type="text" placeholder="Recipe Instructions" required  />
+                <br />
+                <button type="submit">Submit</button>
+            </form>
+        </body>
+
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
