added ingredients field to newRecipe.html for testing purposes

--- a/client/public/NewRecipe.html
+++ b/client/public/NewRecipe.html
@@ -84,6 +84,9 @@
             <label for="difficultyField"><h2>Difficulty</h2></label>
             <input type="text" name="difficultyField" placeholder="ex. moderate" />
             <br />
+            <label for="ingredientsField"><h2>Ingredients</h2></label>
+            <input type="text" name="ingredientsField" placeholder="ex. many lima beans" />
+            <br />
             <label for="recipeInstructionsField"><h2>Recipe Instructions</h2></label>
             <input type="text" name="recipeInstructionsField" placeholder="ex. chop onions"/>
             <br />
