--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,13 +20,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allura" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Zeyada" />
         <title>Recipe App</title>
     </head>
 
     <body>
         <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+            You need to enable JavaScript to run this app.
+        </noscript>
         <div id="root"></div>
         <!--
       This HTML file is a template.
